# whisper.cpp

./: .gitattributes  .gitmodules  CMakeLists.txt
demo/: demo.cpp
include/: ONNXWrapper.h  base64.h  common.h  nncaseWrapper.h  timer.h  wav2wav.h  whisper.h
src/: base64.cpp  wav2wav.cpp  whisper.cpp
